Resolve initialization errors
Apache starts, though database import needed to start testing

--- a/etc/apache/php.ini
+++ b/etc/apache/php.ini
@@ -40,7 +40,7 @@ log_errors_max_len = 1024
 ignore_repeated_errors = Off
 ignore_repeated_source = Off
 report_memleaks = On
-track_errors = On
+;track_errors = On
 error_log = syslog
 
 arg_separator.input = "&;"
@@ -59,7 +59,7 @@ default_mimetype = "text/html"
 doc_root =
 user_dir =
 
-extension_dir = "/opt/php5/lib/php/extensions/no-debug-non-zts-20131226"
+;extension_dir = "/opt/php5/lib/php/extensions/no-debug-non-zts-20131226"
 extension=bcmath.so
 extension=bz2.so
 extension=calendar.so
