Remove openssl and radius
Openssl is in core
alternative)

TODO: investigate radius alternative

--- a/etc/apache/php.ini
+++ b/etc/apache/php.ini
@@ -75,8 +75,8 @@ extension=mbstring.so
 extension=mcrypt.so
 extension=memcache.so
 zend_extension=opcache.so
-extension=openssl.so
-extension=radius.so
+;extension=openssl.so
+;extension=radius.so
 extension=readline.so
 extension=snmp.so
 extension=zip.so
