Migrate to SystemD by linking default envvars path
Still a work-in-progress, since dumper is not run, but symlink allows
successful service start

--- a/etc/apache/php.ini
+++ b/etc/apache/php.ini
@@ -40,7 +40,6 @@ log_errors_max_len = 1024
 ignore_repeated_errors = Off
 ignore_repeated_source = Off
 report_memleaks = On
-;track_errors = On
 error_log = syslog
 
 arg_separator.input = "&;"
@@ -74,7 +73,7 @@ extension=iconv.so
 extension=mbstring.so
 extension=mcrypt.so
 extension=memcache.so
-zend_extension=opcache.so
+;zend_extension=opcache.so
 ;extension=openssl.so
 ;extension=radius.so
 extension=readline.so
