Migrate Exim to SystemD
There is one service which accepts the stage as an identifier:

systemctl start exim4@1

TODO: This is running as the system user Debian-exim, so a firewall rule
needs to redirect port 25 to port 2500 (all ports are padded out to >
1024 with 0s).

TODO: Only stage1 is tested so far. Test 2 and 4.

TODO: Currently testing with Debian's build. Need to install our custom
build. Reminder: We need to add back features from previous commit.

TODO: Update init script

--- a/scripts/systemd/exim4@.service
+++ b/scripts/systemd/exim4@.service
@@ -5,10 +5,10 @@ Conflicts=sendmail.service postfix.service
 
 [Service]
 User=Debian-exim
+Group=mailcleaner
 PrivateTmp=false
-Environment=QUEUE=1h
 EnvironmentFile=-/etc/sysconfig/exim
-ExecStartPre=-/usr/mailcleaner/bin/dump_exim_config.pl %I
+ExecStartPre=+/usr/mailcleaner/bin/dump_exim_config.pl %I
 #ExecStart=/opt/exim4/bin/exim -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q5m
 ExecStart=/usr/sbin/exim4 -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q5m
 
