Define user explicitly

--- a/scripts/systemd/mariadb@.service.d/overrides.conf
+++ b/scripts/systemd/mariadb@.service.d/overrides.conf
@@ -4,8 +4,8 @@ ConditionPathExists=/usr/mailcleaner/etc/mysql/my_%I.cnf
 [Service]
 Type=exec
 Environment=MYSQLD_MULTI_INSTANCE="--defaults-file=/usr/mailcleaner/etc/mysql/my_%I.cnf --datadir=/var/mailcleaner/spool/mysql_%I --log-bin=/var/mailcleaner/log/mysql_%I/mysql_bin.log --log-error=/var/mailcleaner/log/mysql_%I/mysql.log --pid-file=/var/mailcleaner/run/mysql_%I/mysqld.pid --socket=/var/mailcleaner/run/mysql_%I/mysqld.sock --defaults-group-suffix=.%I --basedir=/usr "
-#User=mysql
-#Group=mysql
+User=mysql
+Group=mysql
 ExecStartPre=
 ExecStartPre=+/usr/mailcleaner/bin/dump_mysql_config.pl %I
 ExecStart=
