--- a/scripts/systemd/apache2.service.d/override.conf
+++ b/scripts/systemd/apache2.service.d/override.conf
@@ -1,5 +1,5 @@
 [Unit]
-Description=The Apache HTTP Server for MailCleaner
+Description=Apache HTTP daemon for MailCleaner
 
 [Service]
 Environment=APACHE_CONFDIR=/usr/mailcleaner/etc/apache
