--- a/scripts/systemd/exim4@4.service.d/overrides.conf
+++ b/scripts/systemd/exim4@4.service.d/overrides.conf
@@ -1,2 +1,3 @@
 [Service]
+Description=Outgoing MTA stage for MailCleaner
 ExecStart=/usr/sbin/exim4 -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q1m
