Require Stage 2 before Stage 1, remove redundant description

--- a/scripts/systemd/exim4@1.service.d/overrides.conf
+++ b/scripts/systemd/exim4@1.service.d/overrides.conf
@@ -1,6 +1,6 @@
 [Unit]
 Description=Incoming MTA stage for MailCleaner
-After=exim4\@4.service
+After=exim4\@2.service exim4\@4.service
 
 [Service]
 ExecStart=/usr/sbin/exim4 -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q5m
