Install in MailCleaner target

--- a/scripts/systemd/apache2.service.d/override.conf
+++ b/scripts/systemd/apache2.service.d/override.conf
@@ -9,3 +9,6 @@ PrivateTmp=false
 ProtectControlGroups=false
 ProtectKernelModules=false
 ProtectSystem=false
+
+[Install]
+WantedBy=mailcleaner.target
