--- a/scripts/systemd/exim4@1.service.d/overrides.conf
+++ b/scripts/systemd/exim4@1.service.d/overrides.conf
@@ -4,3 +4,6 @@ After=exim4\@2.service exim4\@4.service
 
 [Service]
 ExecStart=/usr/sbin/exim4 -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q5m
+
+[Install]
+WantedBy=mailcleaner.target
