--- a/scripts/systemd/exim4@2.service.d/overrides.conf
+++ b/scripts/systemd/exim4@2.service.d/overrides.conf
@@ -4,3 +4,6 @@ After=exim\@4.service
 
 [Service]
 ExecStart=/usr/sbin/exim4 -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd
+
+[Install]
+WantedBy=mailcleaner.target
