--- a/scripts/systemd/exim4@4.service.d/overrides.conf
+++ b/scripts/systemd/exim4@4.service.d/overrides.conf
@@ -1,3 +1,8 @@
-[Service]
+[Unit]
 Description=Outgoing MTA stage for MailCleaner
+
+[Service]
 ExecStart=/usr/sbin/exim4 -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q1m
+
+[Install]
+WantedBy=mailcleaner.target
