--- a/share/spamd/.gitignore
+++ b/share/spamd/.gitignore
@@ -1,5 +1,12 @@
-/70_mc_dkim_scores.cf
-/70_mc_spf_scores.cf
-/92_mc_dnsbl_disabled.cf
+/*.cf
+/!00_MC_LOM.cf
+/!70_mc_uris.cf
+/!91_mc_dnsbl_scores.cf
+/!95_scores.cf
+/!99_mc_wl_domains.cf
+/!Botnet.cf
+/!german.cf
+/!iXhash.cf
+/!imageinfo.cf
+/!pdfinfo.cf
 /sa_plugins.pre
-/mailscanner.cf
