Start mailcleaner.target works
TODO: Need to do more research on stopping required services.

--- a/scripts/systemd/apache2.service.d/override.conf
+++ b/scripts/systemd/apache2.service.d/override.conf
@@ -1,5 +1,6 @@
 [Unit]
 Description=Apache HTTP daemon for MailCleaner
+PartOf=mailcleaner.service
 
 [Service]
 Environment=APACHE_CONFDIR=/usr/mailcleaner/etc/apache
