--- a/scripts/systemd/clamav-daemon.service.d/override.conf
+++ b/scripts/systemd/clamav-daemon.service.d/override.conf
@@ -1,7 +1,12 @@
 [Unit]
 Description=Clam AntiVirus daemon for MailCleaner
+BindsTo=clamav-daemon.socket
 After=clamav-daemon.socket
+PartOf=mailcleaner.service
 
 [Service]
 ExecStart=
 ExecStart=/usr/sbin/clamd --config-file=/usr/mailcleaner/etc/clamav/clamd.conf
+
+[Install]
+WantedBy=mailcleaner.target
