--- a/scripts/systemd/exim4@4.service.d/overrides.conf
+++ b/scripts/systemd/exim4@4.service.d/overrides.conf
@@ -1,5 +1,6 @@
 [Unit]
 Description=Outgoing MTA stage for MailCleaner
+PartOf=mailcleaner.service
 
 [Service]
 ExecStart=/usr/sbin/exim4 -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q1m
