--- a/scripts/systemd/greylistd.service.d/override.conf
+++ b/scripts/systemd/greylistd.service.d/override.conf
@@ -1,5 +1,9 @@
 [Unit]
 Description=Greylist daemon for MailCleaner
+PartOf=mailcleaner.service
 
 [Service]
 ExecStartPre=+/usr/mailcleaner/bin/dump_greylistd_config.pl
+
+[Install]
+WantedBy=mailcleaner.target
