--- a/scripts/systemd/mariadb@.service.d/overrides.conf
+++ b/scripts/systemd/mariadb@.service.d/overrides.conf
@@ -1,5 +1,6 @@
 [Unit]
 ConditionPathExists=/usr/mailcleaner/etc/mysql/my_%I.cnf
+PartOf=mailcleaner.service
 
 [Service]
 Type=exec
@@ -13,6 +14,3 @@ ExecStart=/usr/bin/mariadbd-safe $MYSQLD_MULTI_INSTANCE $MYSQLD_OPTS
 ExecStartPost=
 ProtectHome=false
 ProtectSystem=false
-
-[Install]
-WantedBy=mailcleaner.target
