--- a/scripts/systemd/snmpd.service.d/override.conf
+++ b/scripts/systemd/snmpd.service.d/override.conf
@@ -1,5 +1,6 @@
 [Unit]
 Description=SNMP daemon for MailCleaner
+PartOf=mailcleaner.service
 
 [Service]
 ExecStartPre=/usr/mailcleaner/bin/dump_snmpd_config.pl
@@ -8,3 +9,6 @@ ExecStartPre=/usr/mailcleaner/bin/dump_snmpd_config.pl
 #ProtectControlGroups=false
 #ProtectKernelModules=false
 #ProtectSystem=false
+
+[Install]
+WantedBy=mailcleaner.target
