--- a/scripts/systemd/spamd@newsld.service.d/override.conf
+++ b/scripts/systemd/spamd@newsld.service.d/override.conf
@@ -1,9 +1,7 @@
-[Install]
-WantedBy=mailcleaner.target
-
 [Unit]
 Description=Newsletter Daemon daemon for MailCleaner
 After=mariadb@slave.service
+PartOf=mailcleaner.service
 
 [Service]
 Type=forking
@@ -28,3 +26,6 @@ LockPersonality=false
 RestrictRealtime=false
 RestrictSUIDSGID=false
 Restart=on-failure
+
+[Install]
+WantedBy=mailcleaner.target
