--- a/scripts/systemd/spamd@spamd.service.d/override.conf
+++ b/scripts/systemd/spamd@spamd.service.d/override.conf
@@ -1,9 +1,7 @@
-[Install]
-WantedBy=mailcleaner.target
-
 [Unit]
 Description=SpamAssassin Daemon daemon for MailCleaner
 After=mariadb@slave.service
+PartOf=mailcleaner.service
 
 [Service]
 PIDFile=/var/mailcleaner/run/spamd/%I.pid
@@ -26,3 +24,6 @@ RestrictNamespaces=false
 LockPersonality=false
 RestrictRealtime=false
 RestrictSUIDSGID=false
+
+[Install]
+WantedBy=mailcleaner.target
