--- a/scripts/systemd/clamav-daemon.socket.d/override.conf
+++ b/scripts/systemd/clamav-daemon.socket.d/override.conf
@@ -1,8 +1,10 @@
 [Unit]
 Description=Clam AntiVirus socket for MailCleaner
+Before=clamav-daemon.service
 ConditionPathExistsGlob=
 ConditionPathExistsGlob=/var/mailcleaner/spool/clamav/main.{c[vl]d,inc}
 ConditionPathExistsGlob=/var/mailcleaner/spool/clamav/daily.{c[vl]d,inc}
+PartOf=mailcleaner.service
 
 [Socket]
 ExecStartPre=+/usr/mailcleaner/bin/dump_clamav_config.pl
