--- a/scripts/systemd/ufw.service.d/override.conf
+++ b/scripts/systemd/ufw.service.d/override.conf
@@ -1,5 +1,9 @@
 [Unit]
 Description=Uncomplicated firewall for MailCleaner
+PartOf=mailcleaner.service
 
 [Service]
 ExecStartPre=/usr/mailcleaner/bin/dump_firewall.pl
+
+[Install]
+WantedBy=mailcleaner.target
