Port recent changes to current

--- a/etc/fail2ban/action.d/ipset-multiport.conf
+++ b/etc/fail2ban/action.d/ipset-multiport.conf
@@ -1,12 +1,11 @@
 # Fail2Ban configuration file
 #
-# Author: Cyril Jaquier
-# Modified by Yaroslav Halchenko for multiport banning
+# Author: John Mertz, modified from iptables-blocktype.conf
 #
 
 [INCLUDES]
 
-before = iptables-blocktype.conf
+before = ipset-blocktype.conf
 
 [Definition]
 
@@ -14,23 +13,19 @@ before = iptables-blocktype.conf
 # Notes.:  command executed once at the start of Fail2Ban.
 # Values:  CMD
 #
-actionstart = iptables -N <name>
-              iptables -A <name> -j RETURN
-              iptables -I <chain> -p <protocol> -m multiport --dports <port> -j <name>
+actionstart = ipset add <name>
 
 # Option:  actionstop
 # Notes.:  command executed once at the end of Fail2Ban
 # Values:  CMD
 #
-actionstop = iptables -D <chain> -p <protocol> -m multiport --dports <port> -j <name>
-             iptables -F <name>
-             iptables -X <name>
+actionstop = ipset destroy <name>
 
 # Option:  actioncheck
 # Notes.:  command executed once before each actionban command
 # Values:  CMD
 #
-actioncheck = iptables -n -L <chain> | grep -q '<name>[ \t]'
+actioncheck = ipset list <name> | sed '0,/^Members:$/d'
 
 # Option:  actionban
 # Notes.:  command executed when banning an IP. Take care that the
@@ -38,7 +33,7 @@ actioncheck = iptables -n -L <chain> | grep -q '<name>[ \t]'
 # Tags:    See jail.conf(5) man page
 # Values:  CMD
 #
-actionban = iptables -I <name> 1 -s <ip> -j <blocktype>
+actionban = ipset add <name> <ip>
 
 # Option:  actionunban
 # Notes.:  command executed when unbanning an IP. Take care that the
@@ -46,7 +41,7 @@ actionban = iptables -I <name> 1 -s <ip> -j <blocktype>
 # Tags:    See jail.conf(5) man page
 # Values:  CMD
 #
-actionunban = iptables -D <name> -s <ip> -j <blocktype>
+actionunban = ipset del <name> <ip>
 
 [Init]
 
