Install/enable DCC
Disabled in EE per the license

--- a/scripts/systemd/spamd@spamd.service.d/override.conf
+++ b/scripts/systemd/spamd@spamd.service.d/override.conf
@@ -2,6 +2,7 @@
 Description=SpamAssassin Daemon daemon for MailCleaner
 After=mariadb@slave.service
 PartOf=mailcleaner.service
+Requires=dccifd
 
 [Service]
 PIDFile=/var/mailcleaner/run/spamd/%I.pid
