--- a/scripts/systemd/clamav-daemon.service.d/override.conf
+++ b/scripts/systemd/clamav-daemon.service.d/override.conf
@@ -1,8 +1,9 @@
 [Unit]
 Description=Clam AntiVirus daemon for MailCleaner
 BindsTo=clamav-daemon.socket
-After=clamav-daemon.socket
-PartOf=mailcleaner.service
+After=clamav-daemon.socket mariadb@slave.service
+Requires=mariadb@slave.service
+PartOf=mailcleaner.target
 
 [Service]
 ExecStart=
