--- a/scripts/systemd/clamav-daemon.socket.d/override.conf
+++ b/scripts/systemd/clamav-daemon.socket.d/override.conf
@@ -4,7 +4,9 @@ Before=clamav-daemon.service
 ConditionPathExistsGlob=
 ConditionPathExistsGlob=/var/mailcleaner/spool/clamav/main.{c[vl]d,inc}
 ConditionPathExistsGlob=/var/mailcleaner/spool/clamav/daily.{c[vl]d,inc}
-PartOf=mailcleaner.service
+After=mariadb@slave.service
+Requires=mariadb@slave.service
+PartOf=mailcleaner.target
 
 [Socket]
 ExecStartPre=+/usr/mailcleaner/bin/dump_clamav_config.pl
