--- a/scripts/systemd/greylistd.service.d/override.conf
+++ b/scripts/systemd/greylistd.service.d/override.conf
@@ -1,6 +1,8 @@
 [Unit]
 Description=Greylist daemon for MailCleaner
-PartOf=mailcleaner.service
+After=mariadb@slave.service
+Requires=mariadb@slave.service
+PartOf=mailcleaner.target
 
 [Service]
 ExecStartPre=+/usr/mailcleaner/bin/dump_greylistd_config.pl
