--- a/scripts/systemd/spamd@newsld.service.d/override.conf
+++ b/scripts/systemd/spamd@newsld.service.d/override.conf
@@ -1,7 +1,8 @@
 [Unit]
 Description=Newsletter Daemon daemon for MailCleaner
 After=mariadb@slave.service
-PartOf=mailcleaner.service
+Requires=mariadb@slave.service
+PartOf=mailcleaner.target
 
 [Service]
 Type=forking
