--- a/scripts/systemd/spamd@spamd.service.d/override.conf
+++ b/scripts/systemd/spamd@spamd.service.d/override.conf
@@ -1,8 +1,8 @@
 [Unit]
 Description=SpamAssassin Daemon daemon for MailCleaner
 After=mariadb@slave.service
-PartOf=mailcleaner.service
-Requires=dccifd
+Requires=mariadb@slave.service dccifd.service
+PartOf=mailcleaner.target
 
 [Service]
 PIDFile=/var/mailcleaner/run/spamd/%I.pid
