--- a/scripts/systemd/ufw.service.d/override.conf
+++ b/scripts/systemd/ufw.service.d/override.conf
@@ -1,6 +1,6 @@
 [Unit]
 Description=Uncomplicated firewall for MailCleaner
-PartOf=mailcleaner.service
+After=network.service
 
 [Service]
 ExecStartPre=/usr/mailcleaner/bin/dump_firewall.pl
