--- a/scripts/systemd/clamav-freshclam.service.d/override.conf
+++ b/scripts/systemd/clamav-freshclam.service.d/override.conf
@@ -1,11 +1,13 @@
 [Unit]
 Description=Freshclam virus signature updater for MailCleaner
-After=network.target
-PartOf=mailcleaner.service
+After=network.target mariadb@slave.service
+Requires=mariadb@slave.service
+PartOf=mailcleaner.target
 
 [Service]
 User=clamav
 Group=mailcleaner
+ExecStart=
 ExecStart=/usr/bin/freshclam --user=clamav --config-file=/usr/mailcleaner/etc/clamav/freshclam.conf --daemon-notify=/usr/mailcleaner/etc/clamav/clamd.conf --log=/var/mailcleaner/log/clamav/freshclam.log
 ExecStartPre=+/usr/mailcleaner/bin/dump_freshclam_config.pl
 
