--- a/scripts/systemd/exim4@1.service.d/overrides.conf
+++ b/scripts/systemd/exim4@1.service.d/overrides.conf
@@ -1,7 +1,8 @@
 [Unit]
 Description=Incoming MTA stage for MailCleaner
-After=exim4\@2.service exim4\@4.service
-PartOf=mailcleaner.service
+After=exim4@2.service exim4@4.service mariadb@slave.service
+Requires=mariadb@slave.service
+PartOf=mailcleaner.target
 
 [Service]
 ExecStart=/usr/sbin/exim4 -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q5m
