--- a/scripts/systemd/snmpd.service.d/override.conf
+++ b/scripts/systemd/snmpd.service.d/override.conf
@@ -1,6 +1,8 @@
 [Unit]
 Description=SNMP daemon for MailCleaner
-PartOf=mailcleaner.service
+After=mariadb@slave.service
+Requires=mariadb@slave.service
+PartOf=mailcleaner.target
 
 [Service]
 ExecStartPre=/usr/mailcleaner/bin/dump_snmpd_config.pl
