Add 'nopass' mode for databases
Create relevant symlinks and compatibility for Jessie init commands

--- a/scripts/systemd/mariadb@slave.service.d/override.conf
+++ b/scripts/systemd/mariadb@slave.service.d/override.conf
@@ -2,6 +2,7 @@
 PartOf=mailcleaner.target
 After=mariadb@master.service
 Requires=mariadb@master.service
+Conflicts=mariadb@slave-nopass.service
 
 [Service]
-Environment=MYSQLD_OPTS="--port=3307"
+Environment=MYSQLD_OPTS="--port=3307 --with-aria-tmp-tables"
