Don't define generic Environment for all mariadb's
The substitution in the generic file causes nopass to target a
subdirectory.

--- a/scripts/systemd/mariadb@slave-nopass.service.d/override.conf
+++ b/scripts/systemd/mariadb@slave-nopass.service.d/override.conf
@@ -2,4 +2,6 @@
 Conflicts=mariadb@slave.service
 
 [Service]
+Environment=
+Environment=MYSQLD_MULTI_INSTANCE="--defaults-file=/usr/mailcleaner/etc/mysql/my_slave.cnf --datadir=/var/mailcleaner/spool/mysql_slave --log-bin=/var/mailcleaner/log/mysql_slave/mysql_bin.log --log-error=/var/mailcleaner/log/mysql_slave/mysql.log --pid-file=/var/mailcleaner/run/mysql_slave/mysqld.pid --socket=/var/mailcleaner/run/mysql_slave/mysqld.sock --defaults-group-suffix=.slave --basedir=/usr "
 Environment=MYSQLD_OPTS="--skip-grant-tables --port=3307"
