--- a/scripts/systemd/mariadb@slave.service.d/override.conf
+++ b/scripts/systemd/mariadb@slave.service.d/override.conf
@@ -5,4 +5,5 @@ Requires=mariadb@master.service
 Conflicts=mariadb@slave-nopass.service
 
 [Service]
-Environment=MYSQLD_OPTS="--port=3307 --with-aria-tmp-tables"
+Environment=MYSQLD_MULTI_INSTANCE="--defaults-file=/usr/mailcleaner/etc/mysql/my_slave.cnf --datadir=/var/mailcleaner/spool/mysql_slave --log-bin=/var/mailcleaner/log/mysql_slave/mysql_bin.log --log-error=/var/mailcleaner/log/mysql_slave/mysql.log --pid-file=/var/mailcleaner/run/mysql_slave/mysqld.pid --socket=/var/mailcleaner/run/mysql_slave/mysqld.sock --defaults-group-suffix=.slave --basedir=/usr "
+Environment=MYSQLD_OPTS="--port=3307"
