--- a/scripts/systemd/mariadb@master-nopass.service.d/override.conf
+++ b/scripts/systemd/mariadb@master-nopass.service.d/override.conf
@@ -2,4 +2,6 @@
 Conflicts=mariadb@master.service
 
 [Service]
+Environment=
+Environment=MYSQLD_MULTI_INSTANCE="--defaults-file=/usr/mailcleaner/etc/mysql/my_master.cnf --datadir=/var/mailcleaner/spool/mysql_master --log-bin=/var/mailcleaner/log/mysql_master/mysql_bin.log --log-error=/var/mailcleaner/log/mysql_master/mysql.log --pid-file=/var/mailcleaner/run/mysql_master/mysqld.pid --socket=/var/mailcleaner/run/mysql_master/mysqld.sock --defaults-group-suffix=.master --basedir=/usr"
 Environment=MYSQLD_OPTS="--skip-grant-tables --port=3306"
