Conditional path for each

--- a/scripts/systemd/mariadb@slave.service.d/override.conf
+++ b/scripts/systemd/mariadb@slave.service.d/override.conf
@@ -1,4 +1,5 @@
 [Unit]
+ConditionPathExists=/usr/mailcleaner/etc/mysql/my_slave.cnf
 PartOf=mailcleaner.target
 After=mariadb@master.service
 Requires=mariadb@master.service
