--- a/scripts/systemd/mariadb@master.service.d/override.conf
+++ b/scripts/systemd/mariadb@master.service.d/override.conf
@@ -1,4 +1,5 @@
 [Unit]
+ConditionPathExists=/usr/mailcleaner/etc/mysql/my_master.cnf
 PartOf=mailcleaner.target
 Conflicts=mariadb@master-nopass.service
 
