--- a/scripts/systemd/clamspamd.service
+++ b/scripts/systemd/clamspamd.service
@@ -3,13 +3,13 @@ Description=ClamAV Spam daemon for MailCleaner
 Documentation=man:clamd(8) man:clamd.conf(5) https://docs.clamav.net/
 Requires=mariadb@slave.service
 After=clamav-daemon.socket mariadb@slave.service
-ConditionPathExistsGlob=/var/mailcleaner/spool/clamspam/*db
+#ConditionPathExistsGlob=/var/mailcleaner/spool/clamspam/*db
 PartOf=mailscanner.service mailcleaner.target
 
 [Service]
 Type=forking
-ExecStart=/usr/sbin/clamd --config-file=/usr/mailcleaner/etc/clamav/clamspamd.conf
 ExecStartPre=+/usr/mailcleaner/bin/dump_clamspamd_config.pl
+ExecStart=/usr/sbin/clamd --config-file=/usr/mailcleaner/etc/clamav/clamspamd.conf
 ExecReload=/bin/kill -USR2 $MAINPID
 TimeoutStartSec=420
 
