--- a/scripts/systemd/clamav-daemon.service.d/override.conf
+++ b/scripts/systemd/clamav-daemon.service.d/override.conf
@@ -3,9 +3,11 @@ Description=Clam AntiVirus daemon for MailCleaner
 BindsTo=clamav-daemon.socket
 After=clamav-daemon.socket mariadb@slave.service
 Requires=mariadb@slave.service
-PartOf=mailcleaner.target
+PartOf=mailcleaner.target clamav-daemon.socket
 
 [Service]
+User=clamav
+Group=mailcleaner
 ExecStart=
 ExecStart=/usr/sbin/clamd --config-file=/usr/mailcleaner/etc/clamav/clamd.conf
 
