--- a/scripts/systemd/clamspamd.service
+++ b/scripts/systemd/clamspamd.service
@@ -8,6 +8,8 @@ PartOf=mailscanner.service mailcleaner.target
 
 [Service]
 Type=forking
+User=clamav
+Group=mailcleaner
 ExecStartPre=+/usr/mailcleaner/bin/dump_clamspamd_config.pl
 ExecStart=/usr/sbin/clamd --config-file=/usr/mailcleaner/etc/clamav/clamspamd.conf
 ExecReload=/bin/kill -USR2 $MAINPID
