Run dumper to restore premissions as ExecStartPre

--- a/scripts/systemd/dccifd.service.d/override.conf
+++ b/scripts/systemd/dccifd.service.d/override.conf
@@ -16,6 +16,7 @@ ProtectKernelModules=no
 ProtectControlGroups=no
 ProtectKernelLogs=no
 ProtectProc=default
+ExecStartPre=+/usr/mailcleaner/bin/dump_dcc_config.pl %I
 
 [Install]
 WantedBy=mailcleaner.target
