Update init scripts
Work-in-progress to fix initial mailcleaner.target order.
Change start of mailcleaner.target in install script

--- a/scripts/systemd/clamav-daemon.socket.d/override.conf
+++ b/scripts/systemd/clamav-daemon.socket.d/override.conf
@@ -1,6 +1,7 @@
 [Unit]
 Description=Clam AntiVirus socket for MailCleaner
 Before=clamav-daemon.service
+After=mariadb@slave.service
 ConditionPathExistsGlob=
 ConditionPathExistsGlob=/var/mailcleaner/spool/clamav/main.{c[vl]d,inc}
 ConditionPathExistsGlob=/var/mailcleaner/spool/clamav/daily.{c[vl]d,inc}
