--- a/scripts/systemd/dccifd.service.d/override.conf
+++ b/scripts/systemd/dccifd.service.d/override.conf
@@ -2,6 +2,7 @@
 Description=DCC spam filter for MailCleaner
 Before=
 Before=spamd@spamd.service
+After=mariadb@slave.service
 
 [Service]
 User=dcc
