--- a/scripts/systemd/ufw.service.d/override.conf
+++ b/scripts/systemd/ufw.service.d/override.conf
@@ -1,6 +1,10 @@
 [Unit]
 Description=Uncomplicated firewall for MailCleaner
-After=network.service
+After=network.service mariadb@slave.service first-boot-complete.target
+# Don't start before network. UFW is bound to MailCleaner.
+Before=
+Wants=
+Wants=local-fs.target
 
 [Service]
 ExecStartPre=/usr/mailcleaner/bin/dump_firewall.pl
