--- a/scripts/systemd/mailscanner.service
+++ b/scripts/systemd/mailscanner.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=MailScanner Anti-Virus daemon for MailCleaner
 Requires=mariadb@slave.service preftdaemon.service
-BindsTo=clamav-daemon.socket clamspamd.service spamd@newsld.service spamd@spamd.service spamd@newsld.service
+BindsTo=clamav-daemon.socket clamspamd.service greylistd.service spamd@newsld.service spamd@spamd.service spamd@newsld.service
 After=mariadb@slave.service
 Before=exim4@2.service
 PartOf=mailcleaner.target
