Greylistd should bind to Exim Stage 1 not MailScanner

--- a/scripts/systemd/exim4@1.service.d/overrides.conf
+++ b/scripts/systemd/exim4@1.service.d/overrides.conf
@@ -3,6 +3,7 @@ Description=Incoming MTA stage for MailCleaner
 After=exim4@2.service exim4@4.service mariadb@slave.service
 Requires=mariadb@slave.service
 PartOf=mailcleaner.target
+BindsTo=greylistd.service 
 
 [Service]
 ExecStart=/opt/exim4/bin/exim -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q5m
