Add dependent processes for testing startup

--- a/scripts/systemd/apache2.service.d/override.conf
+++ b/scripts/systemd/apache2.service.d/override.conf
@@ -1,7 +1,7 @@
 [Unit]
 Description=Apache HTTP daemon for MailCleaner
 After=mariadb@slave.service
-Requires=mariadb@slave.service
+Requires=mariadb@slave.service snmpd.service
 PartOf=mailcleaner.target
 
 [Service]
