--- a/scripts/systemd/exim4@1.service.d/overrides.conf
+++ b/scripts/systemd/exim4@1.service.d/overrides.conf
@@ -1,7 +1,7 @@
 [Unit]
 Description=Incoming MTA stage for MailCleaner
 After=exim4@2.service exim4@4.service mariadb@slave.service
-Requires=mariadb@slave.service
+Requires=exim4@2.service exim4@4.service mariadb@slave.service
 PartOf=mailcleaner.target
 BindsTo=greylistd.service 
 
