--- a/scripts/systemd/exim4@2.service.d/overrides.conf
+++ b/scripts/systemd/exim4@2.service.d/overrides.conf
@@ -1,7 +1,7 @@
 [Unit]
 Description=Filtering MTA stage for MailCleaner
 After=exim4@4.service mailscanner.service mariadb@slave.service
-Requires=mariadb@slave.service mailscanner.service
+Requires=exim4@4.service mariadb@slave.service mailscanner.service
 PartOf=mailcleaner.target
 
 [Service]
