Maximalist approach to permission issues
All services run as `mailcleaner:mailcleaner`

This may be better in the long run, since it would allow mailcleaner
services to co-exist with the same services being used by other
applications (eg. additional mariadb instances). However, there are some
services which we may want to pair back to using dedicated users, if
possible.

--- a/scripts/systemd/apache2.service.d/override.conf
+++ b/scripts/systemd/apache2.service.d/override.conf
@@ -5,6 +5,8 @@ Requires=mariadb@slave.service snmpd.service
 PartOf=mailcleaner.target
 
 [Service]
+User=mailcleaner
+Group=mailcleaner
 Environment=APACHE_CONFDIR=/usr/mailcleaner/etc/apache
 ExecStartPre=/usr/mailcleaner/bin/dump_apache_config.pl
 PrivateDevices=false
