--- a/scripts/systemd/clamav-daemon.service.d/override.conf
+++ b/scripts/systemd/clamav-daemon.service.d/override.conf
@@ -6,7 +6,7 @@ Requires=mariadb@slave.service
 PartOf=mailcleaner.target clamav-daemon.socket
 
 [Service]
-User=clamav
+User=mailcleaner
 Group=mailcleaner
 ExecStart=
 ExecStart=/usr/sbin/clamd --config-file=/usr/mailcleaner/etc/clamav/clamd.conf
