--- a/scripts/systemd/dccifd.service.d/override.conf
+++ b/scripts/systemd/dccifd.service.d/override.conf
@@ -5,8 +5,8 @@ Before=spamd@spamd.service
 After=mariadb@slave.service
 
 [Service]
-User=dcc
-Group=dcc
+User=mailcleaner
+Group=mailcleaner
 ProtectHome=no
 PrivateTmp=no
 PrivateDevices=no
