--- a/scripts/systemd/mariadb@.service.d/overrides.conf
+++ b/scripts/systemd/mariadb@.service.d/overrides.conf
@@ -1,7 +1,7 @@
 [Service]
 Type=exec
-User=mysql
-Group=mysql
+User=mailcleaner
+Group=mailcleaner
 ExecStartPre=
 ExecStartPre=+/usr/mailcleaner/bin/dump_mysql_config.pl %I
 ExecStart=
