--- a/scripts/systemd/spamd@newsld.service.d/override.conf
+++ b/scripts/systemd/spamd@newsld.service.d/override.conf
@@ -7,7 +7,7 @@ PartOf=mailcleaner.target
 [Service]
 Type=forking
 PIDFile=/var/mailcleaner/run/spamd/%I.pid
-User=debian-spamd
+User=mailcleaner
 Group=mailcleaner
 ExecStartPre=
 ExecStartPre=+/usr/mailcleaner/bin/dump_%I_config.pl
