--- a/scripts/systemd/spamd@spamd.service.d/override.conf
+++ b/scripts/systemd/spamd@spamd.service.d/override.conf
@@ -6,8 +6,8 @@ PartOf=mailcleaner.target
 
 [Service]
 PIDFile=/var/mailcleaner/run/spamd/%I.pid
-User=debian-spamd
-Group=mailscanner
+User=mailcleaner
+Group=mailcleaner
 ExecStartPre=
 ExecStartPre=+/usr/mailcleaner/bin/dump_spamd_config.pl
 ExecStart=
