--- a/scripts/systemd/clamav-freshclam.service.d/override.conf
+++ b/scripts/systemd/clamav-freshclam.service.d/override.conf
@@ -5,7 +5,7 @@ Requires=mariadb@slave.service
 PartOf=mailcleaner.target
 
 [Service]
-User=clamav
+User=mailcleaner
 Group=mailcleaner
 ExecStart=
 ExecStart=/usr/bin/freshclam --user=clamav --config-file=/usr/mailcleaner/etc/clamav/freshclam.conf --daemon-notify=/usr/mailcleaner/etc/clamav/clamd.conf --log=/var/mailcleaner/log/clamav/freshclam.log
