--- a/scripts/systemd/exim4@1.service.d/overrides.conf
+++ b/scripts/systemd/exim4@1.service.d/overrides.conf
@@ -6,6 +6,8 @@ PartOf=mailcleaner.target
 BindsTo=greylistd.service 
 
 [Service]
+User=mailcleaner
+Group=mailcleaner
 ExecStart=/opt/exim4/bin/exim -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q5m
 
 [Install]
