--- a/scripts/systemd/exim4@4.service.d/overrides.conf
+++ b/scripts/systemd/exim4@4.service.d/overrides.conf
@@ -5,6 +5,8 @@ Requires=mariadb@slave.service
 PartOf=mailcleaner.target
 
 [Service]
+User=mailcleaner
+Group=mailcleaner
 ExecStart=/opt/exim4/bin/exim -C /var/mailcleaner/spool/tmp/exim/exim_stage%I.conf -bd -q1m
 
 [Install]
