--- a/scripts/systemd/snmpd.service.d/override.conf
+++ b/scripts/systemd/snmpd.service.d/override.conf
@@ -5,6 +5,8 @@ Requires=mariadb@slave.service
 PartOf=mailcleaner.target
 
 [Service]
+User=mailcleaner
+Group=mailcleaner
 ExecStartPre=+/usr/mailcleaner/bin/dump_snmpd_config.pl
 ExecStart=
 ExecStart=/usr/sbin/snmpd -Lod -Lf /tmp/snmpd.log -I -smux,mteTrigger,mteTriggerConf -f -u Debian-snmp -g Debian-snmp udp:1611 udp6:1611
