Update user commandline flags
relates to maximalist permission changes

--- a/scripts/systemd/spamd@newsld.service.d/override.conf
+++ b/scripts/systemd/spamd@newsld.service.d/override.conf
@@ -12,7 +12,7 @@ Group=mailcleaner
 ExecStartPre=
 ExecStartPre=+/usr/mailcleaner/bin/dump_%I_config.pl
 ExecStart=
-ExecStart=/usr/sbin/spamd --socketpath=/var/mailcleaner/spool/spamd/%I.sock --pidfile=/var/mailcleaner/run/spamd/%I.pid --syslog=/var/mailcleaner/log/mailscanner/%I.log --username=debian-spamd --groupname=mailscanner --siteconfigpath=/usr/mailcleaner/share/%I --nouser-config --daemonize
+ExecStart=/usr/sbin/spamd --socketpath=/var/mailcleaner/spool/spamd/%I.sock --pidfile=/var/mailcleaner/run/spamd/%I.pid --syslog=/var/mailcleaner/log/mailscanner/%I.log --username=mailcleaner --groupname=mailcleaner --siteconfigpath=/usr/mailcleaner/share/%I --nouser-config --daemonize
 ProtectSystem=false
 PrivateTmp=false
 PrivateDevices=false
