--- a/scripts/systemd/clamav-freshclam.service.d/override.conf
+++ b/scripts/systemd/clamav-freshclam.service.d/override.conf
@@ -8,7 +8,7 @@ PartOf=mailcleaner.target
 User=mailcleaner
 Group=mailcleaner
 ExecStart=
-ExecStart=/usr/bin/freshclam --user=clamav --config-file=/usr/mailcleaner/etc/clamav/freshclam.conf --daemon-notify=/usr/mailcleaner/etc/clamav/clamd.conf --log=/var/mailcleaner/log/clamav/freshclam.log
+ExecStart=/usr/bin/freshclam --user=mailcleaner --config-file=/usr/mailcleaner/etc/clamav/freshclam.conf --daemon-notify=/usr/mailcleaner/etc/clamav/clamd.conf --log=/var/mailcleaner/log/clamav/freshclam.log
 ExecStartPre=+/usr/mailcleaner/bin/dump_freshclam_config.pl
 
 [Install]
