--- a/scripts/systemd/snmpd.service.d/override.conf
+++ b/scripts/systemd/snmpd.service.d/override.conf
@@ -9,7 +9,7 @@ User=mailcleaner
 Group=mailcleaner
 ExecStartPre=+/usr/mailcleaner/bin/dump_snmpd_config.pl
 ExecStart=
-ExecStart=/usr/sbin/snmpd -Lod -Lf /tmp/snmpd.log -I -smux,mteTrigger,mteTriggerConf -f -u Debian-snmp -g Debian-snmp udp:1611 udp6:1611
+ExecStart=/usr/sbin/snmpd -C /etc/snmp/snmpd.conf.d/mailcleaner.conf -Lod -Lf /var/mailcleaner/log/snmpd/mailcleaner.log -I -smux,mteTrigger,mteTriggerConf -f -u mailcleaner -g mailcleaner udp:1611 udp6:1611
 #PrivateDevices=false
 #PrivateTmp=false
 #ProtectControlGroups=false
