--- a/scripts/systemd/spamd@spamd.service.d/override.conf
+++ b/scripts/systemd/spamd@spamd.service.d/override.conf
@@ -11,7 +11,7 @@ Group=mailcleaner
 ExecStartPre=
 ExecStartPre=+/usr/mailcleaner/bin/dump_spamd_config.pl
 ExecStart=
-ExecStart=/usr/sbin/spamd --socketpath=/var/mailcleaner/spool/spamd/%I.sock --pidfile=/var/mailcleaner/run/spamd/%I.pid --syslog=/var/mailcleaner/log/mailscanner/%I.log --username=debian-spamd --groupname=mailscanner --siteconfigpath=/usr/mailcleaner/share/%I --nouser-config --daemonize
+ExecStart=/usr/sbin/spamd --socketpath=/var/mailcleaner/spool/spamd/%I.sock --pidfile=/var/mailcleaner/run/spamd/%I.pid --syslog=/var/mailcleaner/log/mailscanner/%I.log --username=mailcleaner --groupname=mailcleaner --siteconfigpath=/usr/mailcleaner/share/%I --nouser-config --daemonize
 ProtectSystem=false
 PrivateTmp=false
 PrivateDevices=false
