Don't check for ClamAV sigs in daemon unit
Already checked by socket, so this is redundant and conflicts with
freshclam.

--- a/scripts/systemd/clamav-daemon.service.d/override.conf
+++ b/scripts/systemd/clamav-daemon.service.d/override.conf
@@ -1,6 +1,7 @@
 [Unit]
 Description=Clam AntiVirus daemon for MailCleaner
 BindsTo=clamav-daemon.socket
+ConditionPathExistsGlob=
 After=clamav-daemon.socket mariadb@slave.service
 Requires=mariadb@slave.service
 PartOf=mailcleaner.target clamav-daemon.socket
